# VulkanRaymarchingLsystems

./: .gitignore  3DVulkanLsysRetry.sln  3DVulkanLsysRetry.vcxproj  3DVulkanLsysRetry.vcxproj.filters  BFSSystem.cpp  BFSSystem.hpp  BVH.cpp  BVH.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CommonHeader.hpp  FileUtils.cpp  FileUtils.hpp  LSystem3D.hpp  README  README.md  VulkanBackend.cpp  VulkanBackend.hpp  VulkanRaymarchAppInit.cpp  VulkanRaymarchAppInit.hpp  preset_table.inl  presets.json
3DVulkan.8B1B1AE2/x64/Debug/: 3DVulkanLsysRetry.exe.recipe  3DVulkanLsysRetry.ilk  3DVulkanLsysRetry.vcxproj.FileListAbsolute.txt  vc143.idb  vulkanraymarchapp.obj.enc
3DVulkan.8B1B1AE2/x64/Debug/3DVulkan.8B1B1AE2.tlog/: 3DVulkanLsysRetry.lastbuildstate  3DVulkanLsysRetry.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
3DVulkan.8B1B1AE2/x64/Release/: 3DVulkanLsysRetry.exe.recipe  3DVulkanLsysRetry.vcxproj.FileListAbsolute.txt
shaders/: comp_blit_frag.glsl  comp_blit_frag.spv  comp_blit_vert.glsl  comp_blit_vert.spv  comp_raymarch.spv  compile.ps1  compile.ps1.txt  debug_line_vert.spv  debug_vert.glsl  debug_vert.spv  frag.spv  output.txt  raymarch_comp.glsl  raymarch_comp.spv  raymarch_frag.glsl  raymarch_frag.spv  raymarch_vert.glsl  raymarch_vert.spv  raymarchasdfad_comp.spv  vert.spv
src/: LSystem3D.cpp  LSystem3D.hpp  VulkanRaymarchApp.cpp  VulkanRaymarchApp.hpp  main.cpp
x64/Debug/: testxml.xml
(+10 files in other folders)
